# WattpadDownloader

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-packages  README.md
samples/: wattpad-books-presents_237369078.epub
src/api/: .env_template  create_book.py  main.py  pyproject.toml  requirements.txt
src/api/src/: create_book.py  footer.html  main.py  test_break.py
src/api/src/create_book/: __init__.py  config.py  create_book.py  exceptions.py  logs.py  models.py  parser.py  utils.py  vars.py
src/api/src/create_book/generators/: __init__.py  epub.py  new_epub.py  new_pdf.py  pdf.py  types.py
src/api/src/create_book/generators/pdf/: book.html  exiftool.config  notes.md  stylesheet.css
src/api/src/pdf/: author.html  book.html  copyright.html  cover_and_copyright.html  stylesheet.css  toc.xsl
src/api/src/tests/: test_story.py
src/frontend/: .prettierrc  jsconfig.json  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.js
src/frontend/src/: app.css  app.html  app.pcss
src/frontend/src/lib/: styles.css
src/frontend/src/lib/components/: LanguageSelector.svelte
src/frontend/src/lib/i18n/: index.svelte.js
src/frontend/src/lib/i18n/locales/: en.json  es.json  my.json  pt.json  si.json  th.json  tr.json  vi.json
src/frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/frontend/src/routes/notfound/: +page.svelte
src/frontend/static/: sitemap.xml
